--- a/Android-stick-navigation-layout/app/src/main/res/values/styles.xml
+++ b/Android-stick-navigation-layout/app/src/main/res/values/styles.xml
@@ -8,4 +8,21 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="radio_button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:button">@null</item>
+        <!--<item name="android:paddingBottom">4dp</item>-->
+        <!--<item name="android:paddingTop">4dp</item>-->
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:drawablePadding">3dp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">15sp</item>
+
+        <item name="android:background">@null</item>
+    </style>
+
+
 </resources>
