fix bug of stickyNavigationLayout

--- a/Android-stick-navigation-layout/app/src/main/res/layout/frag_sticky_layout.xml
+++ b/Android-stick-navigation-layout/app/src/main/res/layout/frag_sticky_layout.xml
@@ -27,32 +27,48 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-   <!-- <FrameLayout
+    <FrameLayout
+        android:id="@+id/fl_subscribe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >-->
+        android:background="@android:color/holo_green_light"
+        android:visibility="gone"
+        >
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-            <com.heaven7.android.sticky_navigation_layout.demo.SimpleViewPagerIndicator
-                android:id="@id/vp_indicator"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="#ffffffff" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="@mipmap/bg_shadow" />
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="--------订阅-----"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-        </LinearLayout>
+    </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+
+        <com.heaven7.android.sticky_navigation_layout.demo.SimpleViewPagerIndicator
+            android:id="@id/vp_indicator"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#ffffffff" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@mipmap/bg_shadow" />
+    </LinearLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 
 </com.heaven7.android.StickyLayout.StickyNavigationLayout>
