--- a/Android-stick-navigation-layout/app/src/main/res/layout/frag_sticky_layout.xml
+++ b/Android-stick-navigation-layout/app/src/main/res/layout/frag_sticky_layout.xml
@@ -25,6 +25,15 @@
             android:text="标题党--嘎嘎"
             android:textSize="30sp"
             android:textStyle="bold" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_tabs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scrollbars="none"
+            >
+        </android.support.v7.widget.RecyclerView>
+
     </RelativeLayout>
 
     <LinearLayout
