--- a/Android-stick-navigation-layout/app/src/main/res/layout/activity_main.xml
+++ b/Android-stick-navigation-layout/app/src/main/res/layout/activity_main.xml
@@ -49,40 +49,41 @@
         android:orientation="vertical"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/stickyLayout"
+        android:layout_above="@+id/rg"
         app:stickyLayout_top_id = "@+id/top_view"
         app:stickyLayout_indicator_id = "@+id/vp_indicator"
-        app:stickyLayout_content_id = "@+id/vp"
-        android:layout_above="@+id/rg"
+        app:stickyLayout_content_id = "@+id/rv"
         >
 
-        <RelativeLayout
+        <com.heaven7.android.StickyLayout.StickyHeaderView
             android:id="@+id/top_view"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="#8800ff00" >
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_gravity="center"
                 android:gravity="center"
                 android:text="标题党--嘎嘎"
                 android:textSize="30sp"
                 android:textStyle="bold" />
-        </RelativeLayout>
+        </com.heaven7.android.StickyLayout.StickyHeaderView>
 
-        <com.heaven7.android.sticky_navigation_layout.demo.SimpleViewPagerIndicator
+        <com.heaven7.android.sticky_navigation_layout.demo.view.SimpleViewPagerIndicator
             android:id="@id/vp_indicator"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#ffffffff" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@id/vp"
+        <android.support.v7.widget.RecyclerView
+            android:id="@id/rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#44ff0000" >
-        </android.support.v4.view.ViewPager>
+        </android.support.v7.widget.RecyclerView>
 
 
     </com.heaven7.android.StickyLayout.StickyNavigationLayout>
