check fast fling when NestedScrollFrameLayout in StickyNavigationLayout

--- a/Android-stick-navigation-layout/app/src/main/res/layout/ac_test_nested_scroll_framelayout.xml
+++ b/Android-stick-navigation-layout/app/src/main/res/layout/ac_test_nested_scroll_framelayout.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <com.heaven7.android.StickyLayout.NestedScrollFrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/holo_green_light"
+        app:nsfl_max_y_percent="0.5"
         >
 
         <TextView
