--- a/Android-stick-navigation-layout/sticky-navigation-layout/src/main/res/values/attrs.xml
+++ b/Android-stick-navigation-layout/sticky-navigation-layout/src/main/res/values/attrs.xml
@@ -7,4 +7,8 @@
          <attr name="stickyLayout_auto_fit_scroll" format="boolean|reference"/>
          <attr name="stickyLayout_threshold_percent" format="float|reference"/>
     </declare-styleable>
+
+    <declare-styleable name="NestedScrollFrameLayout">
+        <attr name="nsfl_max_y_percent"  format="float|reference"/>
+    </declare-styleable>
 </resources>
