--- a/Android-stick-navigation-layout/app/src/main/res/layout/activity_main.xml
+++ b/Android-stick-navigation-layout/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,9 @@
             android:id="@id/rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#44ff0000" >
+            android:background="#44ff0000"
+            android:scrollbars="vertical"
+            >
         </android.support.v7.widget.RecyclerView>
 
 
