--- a/Android-stick-navigation-layout/app/src/main/res/layout/activity_main.xml
+++ b/Android-stick-navigation-layout/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -47,7 +48,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/stickyLayout"
         android:layout_above="@+id/rg"
         app:stickyLayout_top_id = "@+id/top_view"
@@ -79,14 +79,14 @@
             android:layout_height="50dp"
             android:background="#88000000" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#44ff0000"
             android:scrollbars="vertical"
             >
-        </android.support.v7.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
 
     </com.heaven7.android.StickyLayout.StickyNavigationLayout>
