--- a/Android-stick-navigation-layout/app/src/main/res/layout/activity_main2.xml
+++ b/Android-stick-navigation-layout/app/src/main/res/layout/activity_main2.xml
@@ -1,4 +1,4 @@
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -62,13 +62,13 @@
         </RadioGroup>
 
     </FrameLayout>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_label"
         android:layout_width="295dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:background="@android:color/white">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
